--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=tttn
-
+server.port=8089
 spring.datasource.url=jdbc:postgresql://localhost:5432/agricultural
 spring.datasource.username=${POSTGRES_USERNAME:postgres}
 spring.datasource.password=${POSTGRES_PASSWORD:12345678}
